<resources>


    <string name="app_name">GoShop</string>
    <string name="title_activity_main">Menu</string>
    <!--Facebook App ID-->
    <string name="facebook_app_id" translatable="false">1538669453103042</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Contact Us</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">First name, Last name</string>
    <string name="prompt_password">Password</string>
    <string name="splashActivityMsg1">Login failed</string>
    <string name="loginActivityLoginEmail">E-mail ID</string>
    <string name="registrationActivityPhone">Phone</string>
    <string name="registrationActivityAddress">Address</string>
    <string name="registrationActivityConfPwd">Confirm password</string>
    <string name="registrationActivityRegister">DONE</string>
    <string name="registrationActivityMsg1">Enter user name</string>
    <string name="registrationActivityMsg2">Enter phone number</string>
    <string name="registrationActivityMsg3">Enter address</string>
    <string name="registrationActivityMsg4">Enter email</string>
    <string name="menuActivityHome">Home</string>
    <string name="menuActivityUserProfile">User profile</string>
    <string name="menuActivityCart">Cart</string>
    <string name="menuActivityFavorite">Favorites</string>
    <string name="menuActivityOrderHist">Order History</string>
    <string name="menuActivityLogout">Logout</string>
    <string name="menuActivityInviteFrnds">Invite Friends</string>
    <string name="menuActivityCommunicate">Communicate</string>
    <string name="loginActivityMsg1">Enter password</string>
    <string name="loginActivityMsg2">Enter user name</string>
    <string name="loginActivityMsg3">Login successful</string>
    <string name="loginActivityMsg4">Network connection error\nPlease check your internet connection...</string>
    <string name="loginActivityMsg5">Please wait, getting from database...</string>
    <string name="menuActivityMsg1">Database error!</string>
    <string name="menuActivityMsg2">Logged out</string>
    <string name="menuActivityMsg3">Profile picture could not be displayed</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">LOG-IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect user name/ password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="orderHistoryFragmentMsg1">Order history cleared</string>
    <string name="orderHistoryFragmentMsg2">No items to display</string>
    <string name="orderHistoryFragmentClearHistory">Clear History</string>

    <string name="title_registration_activity">Registration</string>
    <string name="menuActivityAboutGoShop">About GoShop</string>
    <string name="aboutGoShopText">GoShop is an app created by:\n\nHrushikesh Vasista\nPrashanth Molakala\nPraveen Kumar Selvan\nVasudev Gawde\n</string>
    <string name="cartFragmentCheckout">CHECKOUT</string>
    <string name="title_fragment_cart">Cart</string>
    <string name="title_fragment_userProfile">User Profile</string>
    <string name="title_fragment_favorites">Favorites</string>
    <string name="title_fragment_orderHistory">Order History</string>
    <string name="title_fragment_inviteFriend">Invite Friends </string>

    <string name="title_activity_payment">Payment</string>


    <string name="paymentActivityCardNum">Card number</string>
    <string name="paymentActivitySubmitButton">SUBMIT</string>
    <string name="cartFragmentMsg1">Payment successful!</string>
    <string name="cartFragmentMsg2">Your cart is empty</string>
    <string name="cartFragmentMsg3">You haven\'t added any items to your cart!</string>
    <string name="cartFragmentMsg4">deleted</string>
    <string name="cartFragmentMsg5">Next Delivery: in 2 hour (FREE)</string>
    <string name="cartFragmentMsg6">Swipe left to edit</string>
    <string name="cartFragmentTab1">BAKERY</string>
    <string name="cartFragmentTab2">BEVERAGES</string>
    <string name="cartFragmentTab3">PRODUCE</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Page under construction</string>
    <string name="radio_more_detail">More Details</string>
    <string name="radio_add_cart">Add To Cart</string>
    <string name="radio_add_fav">Add to Favorites</string>
    <string name="qnty">qty</string>

    <!-- Strings related to userProfile -->
    <string name="text1_invitefriendsfragment">Invite friends</string>
    <string name="text2_invitefriendsfragment">Message to Friend</string>
    <string name="text3_invitefriendsfragment">Invite Friend</string>
    <string name="text4_invitefriendsfragment">If you’ve had a good experience with our app, please take a few moment to tell your friends about  Goshop </string>

    <!-- Strings related to userProfile -->
    <string name="name_userprofilefragment">Name</string>
    <string name="phonenumber_userprofilefragment">Phone Number:</string>
    <string name="Address_userprofilefragment">Address</string>
    <string name="EMailid_userprofilefragment">E-Mail Id</string>
    <string name="EditProfile_userprofilefragment">EDIT PROFILE</string>
    <string name="updateProfile_userprofilefragment">Update Profile</string>
    <string name="Profile_userprofilefragment">Profile</string>
    <string name="EditPicture_userprofilefragment">Edit Picture</string>

    <string name="yourComments">Comments</string>
    <string name="fdbckTitle">Title</string>

    <string name="dev">Developed By: </string>
    <string name="devNames">Hrushikesh Vasista\n(hmvasista@gmail.com)\n\nPrashanth Molakala\n(mpnaidu26@gmail.com)\n\nPraveen Kumar\n(praveen.may20@gmail.com)\n\nVasudev Gawde\n(vgawde@hawk.iit.edu)</string>
    <string name="addr">Our Address: </string>
    <string name="address">3300 S Federal St, \nChicago, IL 60616.</string>
    <string name="fbbck">Your Feedback: </string>
    <string name="enterTitle">Enter a feedback title</string>

    <string name="addedcart">added to cart</string>
    <string name="alreadycart">already added to cart</string>
    <string name="addedfav">added to favorites</string>
    <string name="alreadyfav">already added to favorites</string>
    <string name="qntg0">Please include quantity greater than 0</string>

    <string name="getdir">Get Directions</string>

    <!-- Strings for payment activity-->
    <string name="payment_btn_Showcart">Show Cart</string>
    <string name="payment_btn_ConfirmOrder">Confirm Order</string>
    <string name="payment_lbl_Items">Items: </string>
    <string name="payment_lbl_txn">Tax:</string>
    <string name="payment_lbl_totalamount">Your Order: </string>
    <string name="payment_lbl_yourorder">Your Order: </string>

    <string name="EULA_Heading">END USER LICENSE FOR ANDROID GoShop SOFTWARE></string>
    <string name="EULA">END USER LICENSE FOR ANDROID GoShop SOFTWARE\n\n
PLEASE READ THIS DOCUMENT CAREFULLY BEFORE USING THIS SOFTWARE. THIS LICENSE PROVIDES IMPORTANT INFORMATION CONCERNING THE SOFTWARE, PROVIDES YOU WITH A LICENSE TO USE THE SOFTWARE AND CONTAINS WARRANTY AND LIABILITY INFORMATION.
BY USING THE SOFTWARE, YOU ARE ACCEPTING THE SOFTWARE "AS IS" AND AGREEING TO BE BOUND BY THE TERMS OF THIS LICENSE AGREEMENT. IN NO EVENT WILL THE AUTHORS BE HELD LIABLE FOR ANY DAMAGES ARISING FROM THE USE OF THIS SOFTWARE.
IF YOU DO NOT WISH TO DO SO, DO NOT USE THE SOFTWARE.\n\n

1. Terms of License\n
This license allows you to use the Software on a different devices\n\n

2. Restrictions on Use\n
Unless the authors have authorized you to distribute the Software, you shall not make or distribute copies of the Software or transfer the Software from one device to another. You shall not decompile, reverse engineer, disassemble, include in other software, or translate the Software, or use the Software for any commercial purposes. You shall not modify, alter, change or otherwise make any modification to the Software or create derivative works based upon the Software. You shall not rent, lease, resell, sub-license, assign, distribute or otherwise transfer the Software or this license.\n\n
3. Ownership\n
This license provides you with limited rights to use the Software. The authors retains all ownership, right, title and interest in, to and of the Software and all copies of it. All rights not specifically granted in this license, including domestic and international copyrights, are reserved by the authors.\n\n

4. Proprietary Markings\n
The product name, manuals, documentation, and other support materials are either patented, copyrighted, trademarked, constitute valuable trade secrets (whether or not any portion of them may be copyrighted or patented) or are otherwise proprietary to the authors. You shall not remove or obscure the authors\' copyright, trade mark or other proprietary notices from any of the materials contained in this package or downloaded together with the Software.\n\n

5. Disclaimer of Warranties and Technical Support\n
The Software is provided to you for free and on an "AS IS" basis, without any technical support or warranty of any kind including, without limitation, any warranty or condition of merchantability, fitness for a particular purpose and non-infringement.
Authors:\n
Hrushikesh Vasista (hmvasista@gmail.com)\n
Prashanth Molakala (mpnaidu26@gmail.com)\n
Praveen Kumar Selvan (praveen.may20@gmail.com)\n
Vasudev Gawde (vasudev.gawde@gmail.com)</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="contactUsMsg1">Feedback submitted. Thank you!</string>
</resources>
