<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">




    <ImageView
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:id="@+id/addpicture"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/namefield"
        android:adjustViewBounds="true"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:cropToPadding="true"
        android:background="@drawable/border_image"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_userprofilefragment"
        android:id="@+id/textView2"
        android:layout_below="@+id/addpicture"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp"
        android:layout_alignEnd="@+id/textView3"
        android:textColor="@color/Black"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber_userprofilefragment"
        android:id="@+id/textView3"
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:inputType="phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address_userprofilefragment"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textColor="@color/Black"

        android:layout_above="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/emailfield" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/namefield"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:textColor="@color/Black"
        android:layout_toEndOf="@+id/textView2"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phonefield"
        android:textColor="@color/Black"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/namefield"
        android:layout_toEndOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addrfield"
        android:textColor="@color/Black"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignEnd="@+id/button3"
        android:layout_toEndOf="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditPicture_userprofilefragment"
        android:id="@+id/button"
        android:layout_below="@+id/addpicture"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/EMailid_userprofilefragment"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/emailfield"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/phonefield" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailfield"
        android:textColor="@color/Black"
        android:layout_above="@+id/addrfield"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="34dp"
        android:layout_toEndOf="@+id/textView6"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditProfile_userprofilefragment"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView4"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateProfile_userprofilefragment"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/addpicture"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:paddingRight="5dp"
        android:paddingLeft="5dp" />


</RelativeLayout>
