<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs442.hvasista.goshop.RegistrationActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/field1">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registrationUserName"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/prompt_username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/field1"
        android:layout_alignParentEnd="true"
        android:id="@+id/field2">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registrationPhone"
            android:hint="@string/registrationActivityPhone"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/field2"
        android:layout_alignParentEnd="true"
        android:id="@+id/field6">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registrationEmail"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:editable="false"
            android:enabled="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:id="@+id/field3">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registrationActivityAddress"
            android:nestedScrollingEnabled="true"
            android:id="@+id/registrationAddress"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationActivityRegister"
        android:id="@+id/registrationButtonSubmit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/field3" />


</RelativeLayout>
